syntax = "proto3";

package sufs;

service FileHandling {
	rpc WriteFile (WriteRequest) returns (WriteResponse) {}
	rpc HealthCheck(stream HealthRequest) returns (HealthResponse) {}
	rpc ReplicateBlock(ReplicateRequest) returns (ReplicateResponse) {}
}

message BlockDetails {
	int32 blockID = 1;
	float blockSize = 2;
}

message WriteRequest {
	BlockDetails block = 1;
	repeated string dataNodeID = 2;
}

message WriteResponse {
	bool response = 1;
}

message HealthRequest {
	repeated BlockDetails block = 1;
	repeated string dataNodeID = 2;
	bool instruction = 3;
}

message HealthResponse {
	bool response = 1;
}

message ReplicateRequest {
	BlockDetails block = 1;
	repeated string dataNodeID = 2;
}

message ReplicateResponse {
	bool response = 1;
}